# smk-marananta

./: .gitignore  AUTH_IMPLEMENTATION_PLAN.md  DEPLOYMENT_GUIDE.md  DESKTOP_SETUP.md  ENABLE_REALTIME.sql  FINAL_SETUP.sql  FIX_REALTIME.sql  REPAIR_PTSP.sql  RUST_BACKEND_PLAN.md  SUPABASE_ADD_PTSP.sql  SUPABASE_DISABLE_RLS.sql  SUPABASE_FIX_PERMISSIONS.sql  SUPABASE_FIX_RLS.sql  SUPABASE_PTSP.sql  SUPABASE_SETUP.sql  TESTING_GUIDE.md  UPDATE_PTSP_TABLE.sql  next.config.ts  package-lock.json  package.json
backend/: Cargo.toml  DATABASE_TROUBLESHOOTING.md  Dockerfile  FINAL_SOLUTION_DATABASE.md  FINAL_TEST_RESULTS.md  GET_CORRECT_CONNECTION_STRING.md  NEXT_STEPS_TESTING.md  PASSWORD_GUIDE.md  SETUP_ENV.md  SUPABASE_SCHEMA.sql  TESTING_GUIDE.md  TEST_RESULTS.md  TROUBLESHOOTING.md  VERIFY_DATABASE.sql  test_document.txt  test_ppdb.json  test_ptsp.ps1
backend/src/: db.rs  main.rs
backend/src/handlers/: mod.rs  ppdb.rs  ptsp.rs
backend/src/models/: ppdb.rs  ptsp.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/: layout.tsx  page.tsx
src/app/alumni/: page.tsx
src/app/auth/: layout.tsx
src/app/ppdb/: page.tsx
src/app/prestasi/: page.tsx
src/app/ptsp/: page.tsx
src/app/statistik/: page.tsx
src/app/zi/: page.tsx
src/components/: DesktopRedirector.tsx  MagicBento.tsx  ScrollStack.tsx  ShinyText.tsx
src/components/admin/: AdminHeader.tsx  Sidebar.tsx  TopBar.tsx
src/components/auth/: AuthCard.tsx  LoginForm.tsx  SignupForm.tsx
src/components/shared/: Footer.tsx  (+1 more)
src/lib/: api.ts  supabase.ts
(+12 files in other folders)
